[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/start-assets/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://musics/awake10_megaWall.ogg" type="AudioStream" id=2]
[ext_resource path="res://telas/ControlScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://telas/MainMenu.gd" type="Script" id=5]

[node name="MainMenu" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = -2.0
margin_top = -3.0
margin_right = 1023.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1025.0
margin_bottom = 606.0
color = Color( 0.0431373, 0.239216, 0.913725, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 116.805
margin_top = 5.64024
margin_right = 244.805
margin_bottom = 26.6402
rect_scale = Vector2( 6, 6 )
text = "Tower Defense"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 285.0
margin_top = 147.0
margin_right = 370.0
margin_bottom = 236.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 85.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 85.0
margin_bottom = 58.0
theme = ExtResource( 1 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 85.0
margin_bottom = 89.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlMenu" parent="." instance=ExtResource( 4 )]
margin_left = -6.58984
margin_top = -1.51489
margin_right = -6.58984
margin_bottom = -1.51489

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true
[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_down" from="VBoxContainer/Controls" to="." method="_on_Controls_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_down"]
